Sing csr
